spacing fixed

--- a/bootstrap/css/main.css
+++ b/bootstrap/css/main.css
@@ -3,7 +3,7 @@
  background-color is sky blue
 */
 body{
-    padding-top: 6.25em;
+    padding-top: 7em;
     padding-bottom: 5em;
     background-color: #7ec0ee ;
     font-family: lucida sans unicode;
